// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.metapack.bowling";
option java_outer_classname = "BowlingProto";
option objc_class_prefix = "BWL";


package com.metapack.bowling;

import "validate/validate.proto";

service BowlingScore {
  rpc rollBall (RollBallRequest) returns (RollBallReply) {}
  rpc score (ScoreRequest) returns (ScoreReply) {}
}

message ScoreCard {
  string scoreCardId = 1;
}

message RollBallRequest {
  ScoreCard scoreCard = 1;
  uint32 numberOfPins = 2 [(validate.rules).uint32.lte = 10];
}

message RollBallReply {
  ScoreCard scoreCard = 1;
  uint32 currentFrame = 2;
  uint32 score = 3;
}

message ScoreRequest {
  ScoreCard scoreCard = 1;
  uint32 frameNumber = 2 [(validate.rules).uint32.lte = 10];
}

message ScoreReply {
  ScoreCard scoreCard = 1;
  uint32 score = 2;
}